--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,1 +1,1 @@
-{"recommendations": ["slevesque.vscode-autohotkey"]}
+{"recommendations": ["davidanson.vscode-markdownlint","jebbs.markdown-extended","yzhang.markdown-all-in-one","shd101wyy.markdown-preview-enhanced","yzane.markdown-pdf","streetsidesoftware.code-spell-checker","manuth.markdown-converter","mjwsteenbergen.markender","eamodio.gitlens","donjayamanne.githistory","felipecaputo.git-project-manager","slevesque.vscode-autohotkey"]}
